// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <span
            className="resLink-icon"
          >
            <svg>
              dot-building.svg
            </svg>
          </span>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span>
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21 15:36"
            >
              &lt;5s
            </time>
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <span
            className="resLink-icon"
          >
            <svg>
              dot-building.svg
            </svg>
          </span>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span>
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21 15:35"
            >
              &lt;15s
            </time>
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li>
        <a
          className="resLink resLink--all is-selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <span
            className="resLink-icon"
          >
            <svg>
              dot-building.svg
            </svg>
          </span>
          <span
            className="resLink-name"
          >
            vigoda
          </span>
          <span>
            
          </span>
        </a>
      </li>
      <li>
        <a
          className="resLink resLink--building"
          href="/r/snack"
          onClick={[Function]}
        >
          <span
            className="resLink-icon"
          >
            <svg>
              dot-building.svg
            </svg>
          </span>
          <span
            className="resLink-name"
          >
            snack
          </span>
          <span>
            
          </span>
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="Sidebar-spacer"
  >
     
  </div>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
